--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,3 +1,5 @@
+@import "https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css";
+
 /* =================================
   Element Styles
 ==================================== */
