Stable build, Pre-checklist conversion

--- a/app/src/globals/styles/index.scss
+++ b/app/src/globals/styles/index.scss
@@ -1,8 +1,24 @@
-@import './globals/styles/index.scss';
-
 @import "https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css";
 
 
+
+
+
+/* TODO: Move this into .SCSS componets */
+
+/* .Guest-Fade{
+  animation-name: example;
+  animation-duration: 4s;
+}
+
+@keyframes example {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+} */
 
 
 
